--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
     "sourcemap": "^0.1.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "@gmod/indexedfasta": "1.0.13",
+    "generic-filehandle": "2.0.2"
   }
 }
