--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higlass-transcripts",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Gene transcripts track for HiGlass",
   "private": false,
   "author": "Alexander Veit",
@@ -46,7 +46,14 @@
     "fetch-mock": "^8.3.2",
     "karma-server-side": "^1.8.0",
     "fs-extra": "^8.1.0",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "jasmine": "^2.99.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^3.1.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "chai": "^4.2.0"
   },
   "scripts": {
     "build-es": "rm -rf ./es/* && npx babel ./src/scripts/ --out-dir ./es/ --env-name esm",
@@ -62,7 +69,6 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
-    "chai": "^4.2.0",
     "d3-scale": "^1.0.7",
     "d3-color": "^1.4.0",
     "enzyme": "^3.11.0",
@@ -70,15 +76,6 @@
     "higlass": "1.11.2",
     "higlass-register": "^0.3.0",
     "i": "^0.3.6",
-    "jasmine": "^2.99.0",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^3.1.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mixin": "^0.2.0",
-    "mixwith": "^0.1.1",
-    "ndarray": "^1.0.18",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
