--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higlass-transcripts",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Gene transcripts track for HiGlass",
   "private": false,
   "author": "Alexander Veit",
@@ -53,7 +53,16 @@
     "karma-jasmine": "^3.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "i": "^0.3.6",
+    "sourcemap": "^0.1.0",
+    "webpack": "^4.43.0"
   },
   "scripts": {
     "build-es": "rm -rf ./es/* && npx babel ./src/scripts/ --out-dir ./es/ --env-name esm",
@@ -64,23 +73,14 @@
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
     "d3-scale": "^1.0.7",
     "d3-color": "^1.4.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "higlass": "1.11.2",
     "higlass-register": "^0.3.0",
-    "i": "^0.3.6",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
-    "sourcemap": "^0.1.0",
-    "webpack": "^4.43.0",
     "@gmod/indexedfasta": "1.0.13",
     "generic-filehandle": "2.0.2"
   }
