--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higlass-transcripts",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Gene transcripts track for HiGlass",
   "private": false,
   "author": "Alexander Veit",
@@ -62,7 +62,10 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "i": "^0.3.6",
     "sourcemap": "^0.1.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "higlass": "1.11.8"
   },
   "scripts": {
     "build-es": "rm -rf ./es/* && npx babel ./src/scripts/ --out-dir ./es/ --env-name esm",
@@ -73,14 +76,9 @@
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
     "d3-scale": "^1.0.7",
     "d3-color": "^1.4.0",
-    "higlass": "1.11.2",
     "higlass-register": "^0.3.0",
-    "react": "^16.4.2",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.4.2",
     "@gmod/indexedfasta": "1.0.13",
     "generic-filehandle": "2.0.2"
   }
